# Metro2.0

./: README.md  main.py  metro.db  pyproject.toml
Metro/: __init__.py  metro.db  mfunctions.py  mgsockets.py  models.py  msockets.py  routes.py
Metro/static/: 404-train.css  bootstrap.css  colors.css  form.css  index-dark-login.css  index-train.css  index.css  light-text.css  rain.css  store.css
Metro/static/assets/js/: display-triangle.js  index-modals.js  index-sockets.js  index-utility.js  playaudio.js  rain.js  voicechat.js
Metro/static/colors/: classy.css  discord_light.css  feminine.css  meme.css  retro.css  steam.css  tf2_blu.css  tf2_red.css
Metro/static/css/: bootstrap.css  fonts.css  form.css  games.css  index-train.css  index.css  light-text.css  settings.css  store.css  support.css
Metro/static/css/colors/: candy.css  classy.css  discord_dark.css  gold.css  light.css  meme.css  minecraft.css  original.css  reddit.css  (+4 more)
Metro/static/js/: game-sockets.js  index-modals.js  index-sockets.js  playaudio.js  settings.js  store.js  voicechat.js
Metro/templates/: about.html  actualgame.html  base.html  features.html  forgot.html  game.html  index.html  login.html  register.html  store.html  support.html
Metro/templates/error/: 404.html
Metro/templates/support/: create.html  post.html  support.html
Metro/templates/user/: profile.html  settings.html
TODO_METRO/: New Text Document.txt  TODO  bootstrap.txt  color method.txt  metrotodo.txt  minigames-idea.txt  namesforproject.txt
templates/: base.html  features.html  index.html  login.html  support.html
(+28 files in other folders)
